[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Graphics/Shader/Stars.tres" type="Shader" id=1]
[ext_resource path="res://Assets/Graphics/LevelHub_Room_Layer.png" type="Texture" id=2]
[ext_resource path="res://Scenes/LevelHub/LevelLink.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/LevelHub/LevelHub.gd" type="Script" id=4]
[ext_resource path="res://Scenes/LevelHub/LevelHubLink.tscn" type="PackedScene" id=5]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.200637, 0.621019, 1 )
colors = PoolColorArray( 0.0520096, 0.0404663, 0.132813, 1, 0.196078, 0.184314, 0.364706, 1, 0.447059, 0.0352941, 0.717647, 1, 0.951661, 0.929688, 1, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/SIZE = 40.0
shader_param/VELOCITY = 0.5
shader_param/gradient = SubResource( 4 )

[sub_resource type="ProxyTexture" id=2]

[node name="LevelHub" type="Node2D" groups=["Dynamic_Scene"]]
script = ExtResource( 4 )

[node name="StarBackground" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 512, 471 )
scale = Vector2( 1024, 1024 )
z_index = -2
texture = SubResource( 2 )

[node name="Room" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 2 )

[node name="LevelLink" parent="." instance=ExtResource( 3 )]
position = Vector2( 438, 190 )
z_index = -1

[node name="LevelLink2" parent="." instance=ExtResource( 3 )]
position = Vector2( 598, 383 )
z_index = -1
type = 1

[node name="LevelLink3" parent="." instance=ExtResource( 3 )]
position = Vector2( 418, 477 )
z_index = -1
type = 2

[node name="Next_Room" parent="." instance=ExtResource( 5 )]
position = Vector2( 124, 296 )
room = 2

[node name="Previous_Room" parent="." instance=ExtResource( 5 )]
position = Vector2( 892, 299 )
scale = Vector2( -1, 1 )

[connection signal="ready" from="Next_Room" to="." method="_on_Next_Room_ready"]

[editable path="Previous_Room"]
